welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: not found: value marque
	marque(c)
        ^FlowerPot:9: error: not found: value marque
	marque(c)
        ^FlowerPot:11: error: not found: value marque
	marque(c)
        ^FlowerPot:15: error: not found: value marque
	marque(c)
        ^