welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){

def fleur(c:Color){
	marque(c)
	avance
	gauche
	avance
	marque(c)
	recule(2)
	marque(c)
	avance
	droite
	avance
	marque(c)
}

fleur(Color.red)



	
}
